# SmartMem-Green-Agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml  update-uv-lock.yml
archieved/: agent.py
archieved/green_agent/: __init__.py  adaptive_loop.py  agent_interface.py  api_config.py  blackbox_eval.py  green_agent.py  visualize.py
scripts/: test_fake_purple.py
src/: agent.py  executor.py  messenger.py  server.py
src/app/: environment.py
src/green_agent/: .env.template  __init__.py  agent.py  base.py  evaluator.py  green_agent.py  instruction_generator.py  prompts.py  visualize.py
src/green_agent/data/: init_cases.json  test.json
src/green_agent/simulator/: __init__.py  base.py  main.py  test.py  utils.py
src/green_agent/simulator/data_synthesizer/: ac.py  generate_dataset.py  lights.py  llm.py  prompts.py  security.py  speaker.py  unified_synthesizer.py
src/green_agent/simulator/devices/: __init__.py  appliances.py  climate.py  kitchen.py  lights.py  security.py
src/green_agent_v2/: __init__.py  instruction_generator.py  visualize.py
tests/: conftest.py  test_agent.py  test_full_eval.py  test_static.py
