[project]
name = "smartmem-green-agent"
version = "0.1.0"
description = "green agent of smartmem benchmark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "anthropic>=0.36.0",
    "json-repair>=0.30.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "openai>=1.54.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tenacity>=8.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
